kubernetes/apps/kelos-system/kelos/app/httproute.yaml
---
# yaml-language-server: $schema=https://gateway.networking.k8s.io/v1.httproute.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
    name: kelos-session-ui
spec:
    hostnames:
        - kelos.goyangi.io
    parentRefs:
        - name: envoy-internal
          namespace: network
    rules:
        - backendRefs:
              - name: kelos-session-server
                port: 80
